; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_lzma_reset.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_xz_dec.c_lzma_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xz_dec_lzma2 = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32**, i64, i64, i64, i64, i32 }

@STATE_LIT_LIT = common dso_local global i32 0, align 4
@PROBS_TOTAL = common dso_local global i64 0, align 8
@RC_BIT_MODEL_TOTAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xz_dec_lzma2*)* @lzma_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lzma_reset(%struct.xz_dec_lzma2* %0) #0 {
  %2 = alloca %struct.xz_dec_lzma2*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store %struct.xz_dec_lzma2* %0, %struct.xz_dec_lzma2** %2, align 8
  %5 = load i32, i32* @STATE_LIT_LIT, align 4
  %6 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %7 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 5
  store i32 %5, i32* %8, align 8
  %9 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %10 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 4
  store i64 0, i64* %11, align 8
  %12 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %13 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %16 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %19 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i64 0, i64* %20, align 8
  %21 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %22 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32**, i32*** %23, align 8
  %25 = getelementptr inbounds i32*, i32** %24, i64 0
  %26 = load i32*, i32** %25, align 8
  store i32* %26, i32** %3, align 8
  store i64 0, i64* %4, align 8
  br label %27

27:                                               ; preds = %37, %1
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* @PROBS_TOTAL, align 8
  %30 = icmp ult i64 %28, %29
  br i1 %30, label %31, label %40

31:                                               ; preds = %27
  %32 = load i32, i32* @RC_BIT_MODEL_TOTAL, align 4
  %33 = sdiv i32 %32, 2
  %34 = load i32*, i32** %3, align 8
  %35 = load i64, i64* %4, align 8
  %36 = getelementptr inbounds i32, i32* %34, i64 %35
  store i32 %33, i32* %36, align 4
  br label %37

37:                                               ; preds = %31
  %38 = load i64, i64* %4, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %4, align 8
  br label %27

40:                                               ; preds = %27
  %41 = load %struct.xz_dec_lzma2*, %struct.xz_dec_lzma2** %2, align 8
  %42 = getelementptr inbounds %struct.xz_dec_lzma2, %struct.xz_dec_lzma2* %41, i32 0, i32 0
  %43 = call i32 @rc_reset(i32* %42)
  ret void
}

declare dso_local i32 @rc_reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
